fixing up quiz list alignment

--- a/app/javascript/components/card/card.module.scss
+++ b/app/javascript/components/card/card.module.scss
@@ -1,6 +1,6 @@
 .content {
   width: 31%;
-  margin-bottom: 30px;
+  margin: 1%;
   background-color: var(--white);
   color: var(--dark-grey-blue);
   border-radius: 10px;
