--- a/app/javascript/components/quizzes/quizzes.module.scss
+++ b/app/javascript/components/quizzes/quizzes.module.scss
@@ -9,7 +9,6 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
